--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,6 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: sahil_app_production
+  username: sahil_app
+  password: <%= ENV['SAHIL_APP_DATABASE_PASSWORD'] %>
